--- a/public/en/cercador/cercador.html
+++ b/public/en/cercador/cercador.html
@@ -174,6 +174,11 @@
 							<h3>Do you want to know what and who researches in UOC?</h3>
 						</a>
 					</div>
+					<div class="filters-main__box border-green box-green-selected col-xs-12">
+						<a id="tab-2" href="#tab-content-2" role="tab" aria-controls="tab-content-2" aria-selected="true" data-tab-trigger="" class="tab is-active cercadorFiltres">
+							<h3>Nulla vel accumsan dui</h3>
+						</a>
+					</div>
 					<div class="filters-main__box border-green col-xs-12">
 						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="false" data-tab-trigger="" class="tab cercadorTextual">
 							<h3>Do your prefer to do a text search?</h3>
