update home page principal filters section 4 add new filter

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -195,6 +195,11 @@
 						<p><a id="tab-1" href="#tab-content-1" role="tab" aria-controls="tab-content-1" aria-selected="true" data-tab-trigger="" class="tab is-active cercaFiltres"><span class="icon icon--arrow-down"></span></a></p>
 					</div>
 					<div class="filters-main__box border-green">
+						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres">
+							<h3>Nulla vel accumsan dui</h3>
+						</a>
+					</div>
+					<div class="filters-main__box border-green">
 						<h3>Do your prefer to do a text search?</h3>
 						<p><a id="tab-2" href="#tab-content-2" role="tab" aria-controls="tab-content-2" aria-selected="false" data-tab-trigger="" class="tab cercaTextual"><span class="icon icon--arrow-down"></span></a></p>
 					</div>
