--- a/public/ca/index.html
+++ b/public/ca/index.html
@@ -196,7 +196,7 @@
 					</div>
 					<div class="filters-main__box border-green">
 						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres">
-							<h3>Nulla vel accumsan dui Nulla vel accumsan dui</h3>
+							<h3>Albira Solutions</h3>
 						</a>
 					</div>
 					<div class="filters-main__box border-green">
