--- a/public/en/index.html
+++ b/public/en/index.html
@@ -195,9 +195,8 @@
 						<p><a id="tab-1" href="#tab-content-1" role="tab" aria-controls="tab-content-1" aria-selected="true" data-tab-trigger="" class="tab is-active cercaFiltres"><span class="icon icon--arrow-down"></span></a></p>
 					</div>
 					<div class="filters-main__box border-green">
-						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres">
-							<h3>Albira Solutions Albira Solutions Albira Solutions  </h3>
-						</a>
+						<h3>Do you looking for an innovate solution for your business?</h3>
+						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"></p>
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>Do your prefer to do a text search?</h3>
