--- a/public/en/index.html
+++ b/public/en/index.html
@@ -196,7 +196,7 @@
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>Do you looking for an innovate solution for your business?</h3>
-						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"></p>
+						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"><span class="icon icon--arrow-down"></span></p>
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>Do your prefer to do a text search?</h3>
