--- a/public/es/index.html
+++ b/public/es/index.html
@@ -196,7 +196,7 @@
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>¿Buscas una solución innovadora para tú empresa?</h3>
-						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"></p>
+						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"><span class="icon icon--arrow-down"></span></p>
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>¿Prefieres hacer una búsqueda por palabras?</h3>
