--- a/themes/uoc/static/admin/index.html
+++ b/themes/uoc/static/admin/index.html
@@ -10,9 +10,9 @@
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <!-- Include the script that builds the page and powers Netlify CMS 
+   Include the script that builds the page and powers Netlify CMS 
   <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
-
+<!--
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 
   <style>
