--- a/themes/uoc/static/admin/index.html
+++ b/themes/uoc/static/admin/index.html
@@ -3,122 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Content Manager</title>
 
-<!-- Include the styles for the Netlify CMS UI, after your own styles -->
+  <!-- Include the styles for the Netlify CMS UI, after your own styles -->
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.css" />
-  <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
-
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <script src="<%= htmlWebpackPlugin.files.chunks.cms.entry %>"></script>
-
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-
-<!--
-  <style>
-
-    .tags{
-      padding: 1em 0 1em 0;
-    }
-
-    label {
-      background: #5cb85c;
-      color: #fff;
-      padding: .5em;
-      margin: 0 .5em 0 0 ;
-      font-size: 10px;
-      border-radius: 3px;
-    }
-    label:after {
-        content: 'x';
-        font-weight: bold;
-        font-size: 14px;
-        padding-left: 10px;
-    }
-
-  </style>
-
-  <script>
-
-    var SelectorControl = createClass({
-
-      handleChange: function(e) {
-        let items = document.getElementById("query_selected").innerHTML.replace(/<label class=\"selector_tag\">/ig,"").replace(/<\/label>/ig,",");
-        this.props.onChange(items.slice(0,items.length-1));
-      },
-
-      requestData: function(e){
-        let results = document.getElementById("query_results");
-        if(!document.getElementById("text_query").value){
-          results.innerHTML = "";
-          return;
-        }
-        fetch('https://api.idescat.cat/pob/v1/sug.txt?p=q/'+document.getElementById("text_query").value,
-            { 
-              method: 'GET',
-              mode: 'cors'
-            }
-        )
-        .then(function(response) {
-          return response.text()
-        })
-        .then(function(text){
-          results.innerHTML="";
-          text.split("\n").map(function(item){
-            results.innerHTML += "<input type='checkbox' value='query_"+encodeURIComponent(item)+"' onclick=\"document.getElementById('query_selected').innerHTML+='<label class=selector_tag>"+item+"</label>';document.getElementById('trigger').click()\"> " + item + "<br />";
-          });
-        });      
-      },
-
-      render: function() {
-        var value = this.props.value;
-        return h('div', 
-                {
-                  _style : {border:"1px solid red"}
-                },
-                value,
-                  h('div', {
-                      id : "query_selected", 
-                      class : "tags", 
-                      _style : {border: "1px solid #bbb", backgroundColor:"grey"},
-                    }
-                  ),
-                  h('input', {
-                      id : "text_query", 
-                      style : {border: "1px solid #bbb", backgroundColor:"grey"},
-                      onChange: this.handleChange
-                    }
-                  ),
-                  h('button', {
-                      onClick: this.requestData
-                    },
-                    'cerca'
-                  ),
-                  h('div', {
-                      id: "query_results"
-                    }
-                  ),
-                  h('button', {
-                      id : "trigger",
-                      style : {
-                        display : "none"
-                      },
-                      onClick: this.handleChange
-                    },
-                    'trigger'
-                  )
-            );
-      }
-    });
-
-    CMS.registerWidget('selector_custom', SelectorControl);
-  </script>
-
--->
-
+  <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
 </body>
 </html>
