--- a/themes/uoc/static/admin/index.html
+++ b/themes/uoc/static/admin/index.html
@@ -13,9 +13,9 @@
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
 
-  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <!-- Include the script that builds the page and powers Netlify CMS 
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-
+-->
   <style>
 
     .tags{
