--- a/themes/uoc/static/admin/index.html
+++ b/themes/uoc/static/admin/index.html
@@ -11,7 +11,12 @@
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
+  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
 
+  <!-- Include the script that builds the page and powers Netlify CMS 
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+-->
   <style>
 
     .tags{
