--- a/public/es/esdeveniments/alfa.html
+++ b/public/es/esdeveniments/alfa.html
@@ -228,9 +228,9 @@
                     <div>
                         <div class="card card--image-horizontal card--info col-xs-12 card--2y col-clear-right">
                         <div class="card__contents col-xs-12 col-md-4">
-                            <h3 class="h4 ">On</h3>
+                            <h3 class="h4 ">Dónde</h3>
                             <p>Barcelona</p>
-                            <h3 class="h4 clear-both">Quan</h3>
+                            <h3 class="h4 clear-both">Cuándo</h3>
                             <p>
                                 19/12/2019 13:35
                             <p>
