--- a/public/ca/cercador/cercador-ca.html
+++ b/public/ca/cercador/cercador-ca.html
@@ -136,11 +136,11 @@
 			
 			<div class="col-xs-12 col-clear nav-menu-container uoc-ri"> 
 	          <h2>
-	            <a href='/ca/index.html'></a>
+	            <a href='/ca/index.html'>R&amp;I a la UOC</a>
 	          </h2>
 	          <div id="nav-menu-scrollable-container-expand" style="margin-bottom: 1em;">
 	            <div id="nav-menu-scrollable-container" class="nav-menu-scrollable-container">
-	              <nav id="main-nav-menu" aria-label="Menú de navegació" class="nav-menu nav-menu-soft-dropdown hidden-xs hidden-sm hidden-md"><a href="#" class="logogreen hidden-lg hidden-xl"><img src="../../static/img/logo-green.jpg" alt="Logo UOC"></a>
+	              <nav id="main-nav-menu" aria-label="Menú de navegació" class="nav-menu nav-menu-soft-dropdown hidden-xs hidden-sm hidden-md"><a href="#" class="logogreen hidden-lg hidden-xl"><img src="../../static/media/logo-green.jpg" alt="Logo UOC"></a>
 	                <ul>
 	                  <li tabindex="-1" class="col-xs-12 col-lg-2">
 	                    <button onclick="location.href='\/ca\/index.html';" value="Explora l&#39;R&amp;I a la UOC" class="clickable"><span>Explora l&#39;R&amp;I a la UOC</span></button>
@@ -820,7 +820,7 @@
 						<form action="" class="search-form-container filters-main-search">
 							<div class="full-width search-container-top">
 								<div class="col-xs-2 col-md-1"><span class="icon-container hover--dynamic-hover bg-grey">
-									<input type="submit" value="Cerca" name="search_sbm" title="Buscar" onclick="" class="w100-inline-block"><span class="icon icon--search"></span></span>
+									<input type="submit" value="Cerca" name="search_sbm" title="Buscar"  class="w100-inline-block search-text-principal"><span class="icon icon--search"></span></span>
 								</div>
 								<div class="col-xs-10 col-md-11">
 									<input type="search" id="search" aria-label="Paraules a cercar" placeholder="Paraules a cercar" name="searchWords" tabindex="0" value="" title="Paraules a cercar" class="w100-inline-block page-module ruler ruler--thin ruler--primary font-alternate h1">
