--- a/public/ca/difusions/difusions-es.html
+++ b/public/ca/difusions/difusions-es.html
@@ -131,11 +131,11 @@
 			
 			<div class="col-xs-12 col-clear nav-menu-container uoc-ri"> 
 	          <h2>
-	            <a href='/ca/index.html'></a>
+	            <a href='/ca/index.html'>R&amp;I a la UOC</a>
 	          </h2>
 	          <div id="nav-menu-scrollable-container-expand" style="margin-bottom: 1em;">
 	            <div id="nav-menu-scrollable-container" class="nav-menu-scrollable-container">
-	              <nav id="main-nav-menu" aria-label="Menú de navegació" class="nav-menu nav-menu-soft-dropdown hidden-xs hidden-sm hidden-md"><a href="#" class="logogreen hidden-lg hidden-xl"><img src="../../static/img/logo-green.jpg" alt="Logo UOC"></a>
+	              <nav id="main-nav-menu" aria-label="Menú de navegació" class="nav-menu nav-menu-soft-dropdown hidden-xs hidden-sm hidden-md"><a href="#" class="logogreen hidden-lg hidden-xl"><img src="../../static/media/logo-green.jpg" alt="Logo UOC"></a>
 	                <ul>
 	                  <li tabindex="-1" class="col-xs-12 col-lg-2">
 	                    <button onclick="location.href='\/ca\/index.html';" value="Explora l&#39;R&amp;I a la UOC" class="clickable"><span>Explora l&#39;R&amp;I a la UOC</span></button>
