--- a/public/es/cercador/cercador.html
+++ b/public/es/cercador/cercador.html
@@ -1212,5 +1212,10 @@
     
 <script type="application/javascript" src="//cv.uoc.edu/UOC/GEFv2/gef/js/gef.min.js"></script>
 <script src="/js/search.js"></script>
+<script type="text/javascript">
+	var apiPlatacon = 'https:\/\/transfer-research.am.pre.uoc.es\/api\/search';
+	var apiRI = 'https:\/\/webri.albira.io\/api-ri\/search';
+	console.log(apiPlatacon);
+</script>
 </body>
 </html>
