--- a/themes/uoc/static/admin/index.html
+++ b/themes/uoc/static/admin/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <!-- <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script> -->
-  <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
+  <!-- <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script> -->
   <script src="main.js"></script>
 
 </body>
